[package]
name = "violet-cosim"
version = "0.1.0"
authors = ["losfair <zhy20000919@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.3"
rvsim = { git = "https://github.com/losfair/rvsim", rev = "f4964aaac063cdcbf798a2f695914eae4ffef075" }
